src/model_lang45Parser.java
// Generated from model_lang45.g4 by ANTLR 4.12.0
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class model_lang45Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		BEGIN=1, END=2, DIM=3, INT=4, FLOAT=5, BOOL=6, IF=7, ELSE=8, FOR=9, TO=10, 
		STEP=11, NEXT=12, WHILE=13, READLN=14, WRITELN=15, TRUE=16, FALSE=17, 
		COMPARISON_OPS=18, MULTIPLICATION_OPS=19, ADD=20, SUB=21, OR=22, UNARY_OP=23, 
		ID=24, LETTER=25, OPEN_BRACKET=26, CLOSE_BRACKET=27, COLON=28, SEMICOLON=29, 
		ASSIGNMENT=30, COMMA=31, REAL_NUMBER=32, EXP=33, INT_NUMBER=34, BIN_NUMBER=35, 
		OCT_NUMBER=36, DEC_NUMBER=37, HEX_NUMBER=38, WHITE_SPACE=39, COMMENTARY=40;
	public static final int
		RULE_program = 0, RULE_declaration = 1, RULE_type = 2, RULE_statement = 3, 
		RULE_compound_st = 4, RULE_assignment_st = 5, RULE_conditional_st = 6, 
		RULE_fixed_loop_st = 7, RULE_conditional_loop_st = 8, RULE_input_st = 9, 
		RULE_output_st = 10, RULE_expression = 11, RULE_comp_ops_r = 12, RULE_operand = 13, 
		RULE_addition_ops = 14, RULE_term = 15, RULE_mult_ops_r = 16, RULE_number = 17, 
		RULE_logic_value = 18, RULE_factor = 19, RULE_identifier = 20;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "declaration", "type", "statement", "compound_st", "assignment_st", 
			"conditional_st", "fixed_loop_st", "conditional_loop_st", "input_st", 
			"output_st", "expression", "comp_ops_r", "operand", "addition_ops", "term", 
			"mult_ops_r", "number", "logic_value", "factor", "identifier"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'begin'", "'end'", "'dim'", "'int'", "'float'", "'bool'", "'if'", 
			"'else'", "'for'", "'to'", "'step'", "'next'", "'while'", "'readln'", 
			"'writeln'", "'true'", "'false'", null, null, "'plus'", "'min'", "'or'", 
			"'~'", null, null, "'('", "')'", "':'", "';'", "':='", "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "BEGIN", "END", "DIM", "INT", "FLOAT", "BOOL", "IF", "ELSE", "FOR", 
			"TO", "STEP", "NEXT", "WHILE", "READLN", "WRITELN", "TRUE", "FALSE", 
			"COMPARISON_OPS", "MULTIPLICATION_OPS", "ADD", "SUB", "OR", "UNARY_OP", 
			"ID", "LETTER", "OPEN_BRACKET", "CLOSE_BRACKET", "COLON", "SEMICOLON", 
			"ASSIGNMENT", "COMMA", "REAL_NUMBER", "EXP", "INT_NUMBER", "BIN_NUMBER", 
			"OCT_NUMBER", "DEC_NUMBER", "HEX_NUMBER", "WHITE_SPACE", "COMMENTARY"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "model_lang45.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public model_lang45Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode END() { return getToken(model_lang45Parser.END, 0); }
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<TerminalNode> COLON() { return getTokens(model_lang45Parser.COLON); }
		public TerminalNode COLON(int i) {
			return getToken(model_lang45Parser.COLON, i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof model_lang45Listener ) ((model_lang45Listener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof model_lang45Listener ) ((model_lang45Listener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof model_lang45Visitor ) return ((model_lang45Visitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(44);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case DIM:
					{
					setState(42);
					declaration();
					}
					break;
				case BEGIN:
				case IF:
				case FOR:
				case WHILE:
				case READLN:
				case WRITELN:
				case ID:
					{
					setState(43);
					statement();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(47);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==COLON) {
					{
					setState(46);
					match(COLON);
					}
				}

				}
				}
				setState(51); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 16835210L) != 0) );
			setState(53);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationContext extends ParserRuleContext {
		public TerminalNode DIM() { return getToken(model_lang45Parser.DIM, 0); }
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<TerminalNode> COMMA() { return getTokens(model_lang45Parser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(model_lang45Parser.COMMA, i);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof model_lang45Listener ) ((model_lang45Listener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof model_lang45Listener ) ((model_lang45Listener)listener).exitDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof model_lang45Visitor ) return ((model_lang45Visitor<? extends T>)visitor).visitDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			match(DIM);
			setState(56);
			identifier();
			setState(61);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(57);
				match(COMMA);
				setState(58);
				identifier();
				}
				}
				setState(63);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(64);
			type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(model_lang45Parser.INT, 0); }
		public TerminalNode FLOAT() { return getToken(model_lang45Parser.FLOAT, 0); }
		public TerminalNode BOOL() { return getToken(model_lang45Parser.BOOL, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof model_lang45Listener ) ((model_lang45Listener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof model_lang45Listener ) ((model_lang45Listener)listener).exitType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof model_lang45Visitor ) return ((model_lang45Visitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 112L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public Compound_stContext compound_st() {
			return getRuleContext(Compound_stContext.class,0);
		}
		public Assignment_stContext assignment_st() {
			return getRuleContext(Assignment_stContext.class,0);
		}
		public Conditional_stContext conditional_st() {
			return getRuleContext(Conditional_stContext.class,0);
		}
		public Fixed_loop_stContext fixed_loop_st() {
			return getRuleContext(Fixed_loop_stContext.class,0);
		}
		public Conditional_loop_stContext conditional_loop_st() {
			return getRuleContext(Conditional_loop_stContext.class,0);
		}
		public Input_stContext input_st() {
			return getRuleContext(Input_stContext.class,0);
		}
		public Output_stContext output_st() {
			return getRuleContext(Output_stContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof model_lang45Listener ) ((model_lang45Listener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof model_lang45Listener ) ((model_lang45Listener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof model_lang45Visitor ) return ((model_lang45Visitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_statement);
		try {
			setState(75);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BEGIN:
				enterOuterAlt(_localctx, 1);
				{
				setState(68);
				compound_st();
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(69);
				assignment_st();
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 3);
				{
				setState(70);
				conditional_st();
				}
				break;
			case FOR:
				enterOuterAlt(_localctx, 4);
				{
				setState(71);
				fixed_loop_st();
				}
				break;
			case WHILE:
				enterOuterAlt(_localctx, 5);
				{
				setState(72);
				conditional_loop_st();
				}
				break;
			case READLN:
				enterOuterAlt(_localctx, 6);
				{
				setState(73);
				input_st();
				}
				break;
			case WRITELN:
				enterOuterAlt(_localctx, 7);
				{
				setState(74);
				output_st();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Compound_stContext extends ParserRuleContext {
		public TerminalNode BEGIN() { return getToken(model_lang45Parser.BEGIN, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public TerminalNode END() { return getToken(model_lang45Parser.END, 0); }
		public List<TerminalNode> SEMICOLON() { return getTokens(model_lang45Parser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(model_lang45Parser.SEMICOLON, i);
		}
		public Compound_stContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compound_st; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof model_lang45Listener ) ((model_lang45Listener)listener).enterCompound_st(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof model_lang45Listener ) ((model_lang45Listener)listener).exitCompound_st(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof model_lang45Visitor ) return ((model_lang45Visitor<? extends T>)visitor).visitCompound_st(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Compound_stContext compound_st() throws RecognitionException {
		Compound_stContext _localctx = new Compound_stContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_compound_st);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			match(BEGIN);
			setState(78);
			statement();
			setState(83);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SEMICOLON) {
				{
				{
				setState(79);
				match(SEMICOLON);
				setState(80);
				statement();
				}
				}
				setState(85);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(86);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Assignment_stContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode ASSIGNMENT() { return getToken(model_lang45Parser.ASSIGNMENT, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Assignment_stContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment_st; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof model_lang45Listener ) ((model_lang45Listener)listener).enterAssignment_st(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof model_lang45Listener ) ((model_lang45Listener)listener).exitAssignment_st(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof model_lang45Visitor ) return ((model_lang45Visitor<? extends T>)visitor).visitAssignment_st(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Assignment_stContext assignment_st() throws RecognitionException {
		Assignment_stContext _localctx = new Assignment_stContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_assignment_st);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			identifier();
			setState(89);
			match(ASSIGNMENT);
			setState(90);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Conditional_stContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(model_lang45Parser.IF, 0); }
		public TerminalNode OPEN_BRACKET() { return getToken(model_lang45Parser.OPEN_BRACKET, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode CLOSE_BRACKET() { return getToken(model_lang45Parser.CLOSE_BRACKET, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public TerminalNode ELSE() { return getToken(model_lang45Parser.ELSE, 0); }
		public Conditional_stContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditional_st; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof model_lang45Listener ) ((model_lang45Listener)listener).enterConditional_st(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof model_lang45Listener ) ((model_lang45Listener)listener).exitConditional_st(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof model_lang45Visitor ) return ((model_lang45Visitor<? extends T>)visitor).visitConditional_st(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Conditional_stContext conditional_st() throws RecognitionException {
		Conditional_stContext _localctx = new Conditional_stContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_conditional_st);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(IF);
			setState(93);
			match(OPEN_BRACKET);
			setState(94);
			expression();
			setState(95);
			match(CLOSE_BRACKET);
			setState(96);
			statement();
			setState(99);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(97);
				match(ELSE);
				setState(98);
				statement();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Fixed_loop_stContext extends ParserRuleContext {
		public TerminalNode FOR() { return getToken(model_lang45Parser.FOR, 0); }
		public Assignment_stContext assignment_st() {
			return getRuleContext(Assignment_stContext.class,0);
		}
		public TerminalNode TO() { return getToken(model_lang45Parser.TO, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public TerminalNode NEXT() { return getToken(model_lang45Parser.NEXT, 0); }
		public TerminalNode STEP() { return getToken(model_lang45Parser.STEP, 0); }
		public Fixed_loop_stContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fixed_loop_st; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof model_lang45Listener ) ((model_lang45Listener)listener).enterFixed_loop_st(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof model_lang45Listener ) ((model_lang45Listener)listener).exitFixed_loop_st(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof model_lang45Visitor ) return ((model_lang45Visitor<? extends T>)visitor).visitFixed_loop_st(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Fixed_loop_stContext fixed_loop_st() throws RecognitionException {
		Fixed_loop_stContext _localctx = new Fixed_loop_stContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_fixed_loop_st);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(FOR);
			setState(102);
			assignment_st();
			setState(103);
			match(TO);
			setState(104);
			expression();
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==STEP) {
				{
				setState(105);
				match(STEP);
				setState(106);
				expression();
				}
			}

			setState(109);
			statement();
			setState(110);
			match(NEXT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Conditional_loop_stContext extends ParserRuleContext {
		public TerminalNode WHILE() { return getToken(model_lang45Parser.WHILE, 0); }
		public TerminalNode OPEN_BRACKET() { return getToken(model_lang45Parser.OPEN_BRACKET, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode CLOSE_BRACKET() { return getToken(model_lang45Parser.CLOSE_BRACKET, 0); }
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public Conditional_loop_stContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditional_loop_st; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof model_lang45Listener ) ((model_lang45Listener)listener).enterConditional_loop_st(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof model_lang45Listener ) ((model_lang45Listener)listener).exitConditional_loop_st(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof model_lang45Visitor ) return ((model_lang45Visitor<? extends T>)visitor).visitConditional_loop_st(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Conditional_loop_stContext conditional_loop_st() throws RecognitionException {
		Conditional_loop_stContext _localctx = new Conditional_loop_stContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_conditional_loop_st);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(WHILE);
			setState(113);
			match(OPEN_BRACKET);
			setState(114);
			expression();
			setState(115);
			match(CLOSE_BRACKET);
			setState(116);
			statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Input_stContext extends ParserRuleContext {
		public TerminalNode READLN() { return getToken(model_lang45Parser.READLN, 0); }
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(model_lang45Parser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(model_lang45Parser.COMMA, i);
		}
		public Input_stContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_input_st; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof model_lang45Listener ) ((model_lang45Listener)listener).enterInput_st(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof model_lang45Listener ) ((model_lang45Listener)listener).exitInput_st(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof model_lang45Visitor ) return ((model_lang45Visitor<? extends T>)visitor).visitInput_st(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Input_stContext input_st() throws RecognitionException {
		Input_stContext _localctx = new Input_stContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_input_st);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(READLN);
			setState(119);
			identifier();
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(120);
				match(COMMA);
				setState(121);
				identifier();
				}
				}
				setState(126);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Output_stContext extends ParserRuleContext {
		public TerminalNode WRITELN() { return getToken(model_lang45Parser.WRITELN, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode COMMA() { return getToken(model_lang45Parser.COMMA, 0); }
		public Output_stContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_output_st; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof model_lang45Listener ) ((model_lang45Listener)listener).enterOutput_st(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof model_lang45Listener ) ((model_lang45Listener)listener).exitOutput_st(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof model_lang45Visitor ) return ((model_lang45Visitor<? extends T>)visitor).visitOutput_st(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Output_stContext output_st() throws RecognitionException {
		Output_stContext _localctx = new Output_stContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_output_st);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			match(WRITELN);
			setState(128);
			expression();
			{
			setState(129);
			match(COMMA);
			setState(130);
			expression();
			}
			}
		}
